<resources>
    <string name="app_name">Nodes</string>
    <string name="add">Add</string>
    <string name="enter_text_hint">Enter text here</string>
    <string name="restart_camera">Restart Camera</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="record_audio">Record Audio</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="play_audio">Play Audio</string>
    <string name="stop_audio">Stop Audio</string>
    <string name="view_all_entries">View All Entries</string>
    <string name="entries_count">Entries count</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="take_photo">Take photo</string>
    <string name="enter_description_hint">Enter description</string>
    <string name="photo_file_error">Error: Photo file does not exist.</string>
    <string name="compressed_photo_data_error">Error: Compressed photo data is empty.</string>
    <string name="photo_data_null_error">Error: photoData is null or empty before saving.</string>
    <string name="entry_saved_success">Entry and photo data saved correctly!</string>
    <string name="entry_saved_failure">Failed to verify photo data!</string>
    <string name="permissions_not_granted">Permissions not granted</string>
    <string name="location_not_available">Location not available</string>
    <string name="error_entry_not_found">Error: Entry not found.</string>
    <string name="updated_successfully">Updated successfully!</string>
    <string name="bitmap_data_null">Bitmap data is null</string>
    <string name="no_audio_recording">No audio recording available</string>
</resources>


